--- a/src/main/resources/assets/matteroverdrive/lang/en_us.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/en_us.lang
@@ -32,7 +32,7 @@ item.matteroverdrive.security_protocol.empty.name=Security Protocol
 item.matteroverdrive.security_protocol.claim.name=Security Protocol [Claim]
 item.matteroverdrive.security_protocol.claim.details=Claims Machines
 item.matteroverdrive.security_protocol.access.name=Security Protocol [Access]
-item.matteroverdrive.security_protocol.access.details=Allows to access claimed Machines
+item.matteroverdrive.security_protocol.access.details=Allows accessing claimed Machines
 item.matteroverdrive.security_protocol.remove.name=Security Protocol [Remove]
 item.matteroverdrive.security_protocol.remove.details=Removes Claim from Machines
 item.matteroverdrive.security_protocol.invalid=Invalid Security Protocol
@@ -526,7 +526,7 @@ biopart.battery.name=Battery
 biotic_stat.teleport.name=Ender Teleporter
 biotic_stat.teleport.details=Short range teleportation with '%1$s' key /n/Drains %2$s on teleport /n/A battery capable of extracting %2$s is required
 biotic_stat.nanobots.name=Nanobots
-biotic_stat.nanobots.details=Heals woulds using Energy %s/s/n/Increases Health by %s
+biotic_stat.nanobots.details=Heals wounds using Energy %s/s/n/Increases Health by %s
 biotic_stat.nano_armor.name=Nano Armor
 biotic_stat.nano_armor.details=Absorbs %1$s of incoming damage
 biotic_stat.floatation.name=Air Bags
@@ -737,10 +737,10 @@ quest.department_of_agriculture.objective.0=Gather $mineAmount/$maxMineAmount $m
 quest.department_of_agriculture.objective.1=Now Gather $mineAmount/$maxMineAmount $mineBlock.
 quest.department_of_agriculture.objective.2=Now Gather $mineAmount/$maxMineAmount $mineBlock.
 quest.one_true_love.title=One true love
-quest.one_true_love.info=I'm so happy! You can't even imagine what a joyous moment this is! Merry has finally agreed to marry me. You don't even know how many times I've tried to win her heart. At long last her father gave us his blessing. I know our love is more than enough to keeps us going, but I wanted to give her something special. I was hoping you can find me a diamond so I can put a marvelous ring onto her precious finger. I will be forever in your debt and I will be more than happy to compensate you for you'r troubles.
+quest.one_true_love.info=I'm so happy! You can't even imagine what a joyous moment this is! Merry has finally agreed to marry me. You don't even know how many times I've tried to win her heart. At long last her father gave us his blessing. I know our love is more than enough to keeps us going, but I wanted to give her something special. I was hoping you can find me a diamond, so I can put a marvelous ring onto her precious finger. I will be forever in your debt and I will be more than happy to compensate you for you'r troubles.
 quest.one_true_love.objective.0=Mine $mineAmount/$maxMineAmount Diamonds
 quest.weapons_of_war.title=Weapons of war
-quest.weapons_of_war.info=They have oppressed us for long enough! Our proud people will no longer stand for this. Years of oppression, end now! We may be broken in body be we are strong in spirit. This is where we need your help. It may not be pretty, but war is coming and we need a way to defend ourselves. They will throw everything they have at us. The first step of many, is to build anvils use them to forge the weapons we desperately need.
+quest.weapons_of_war.info=They have oppressed us for long enough! Our proud people will no longer stand for this. Years of oppression, end now! We may be broken in body be we are strong in spirit. This is where we need your help. It may not be pretty, but war is coming, and we need a way to defend ourselves. They will throw everything they have at us. The first step of many, is to build anvils use them to forge the weapons we desperately need.
 quest.weapons_of_war.objective.0=Craft $craftAmount/$craftMaxAmount $craftItem
 quest.weapons_of_war.objective.1=Craft $craftAmount swords.
 quest.to_the_power_of.title=To the power of
