--- a/src/main/resources/assets/matteroverdrive/lang/ru_ru.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/ru_ru.lang
@@ -695,17 +695,19 @@ quest.kill_androids.title=Они убьют нас всех!
 quest.kill_androids.info=Они захватили весь мир! Я не знаю как именно они сюда попали, но их количество с каждым днем растет. Кажется что их бесчисленное множество. Мы должны бороться, иначе, мы все погибнем. Борьба начинается с тебя, $player! Помоги нам уничтожит их как можно больше, пока они нас не поработили.
 quest.kill_androids.objective.0=Kill $killCount/$maxKillCount Rogue Androids.
 quest.cocktail_of_ascension.title=Коктейль Вознесения
-quest.cocktail_of_ascension.info=A Crazy scientist has asked you to bring him %2$s gunpowder from a shoveled creeper and %3$s red mushrooms from the darkest depths of the Nether, for his Cocktail Of Ascension.
-quest.cocktail_of_ascension.objective.0=Убейте %2$s/%3$s криперов лопатой
-quest.cocktail_of_ascension.objective.1=Добудьте %2$s/%3$s пороха
-quest.cocktail_of_ascension.objective.2=Добудьте %2$s/%3$s красных грибов в Незере
+quest.cocktail_of_ascension.info=A Crazy scientist has asked you to bring him $gunpowdermaxAmount gunpowder from a shoveled creeper and $mushroommaxAmount red mushrooms from the darkest depths of the Nether, for his Cocktail Of Ascension.
+quest.cocktail_of_ascension.objective.0=Убейте $creeperAmount/$creepermaxAmount криперов лопатой
+quest.cocktail_of_ascension.objective.1=Добудьте $gunpowderAmount/$gunpowdermaxAmount пороха
+quest.cocktail_of_ascension.objective.2=Добудьте $mushroomAmount/$mushroommaxAmount красных грибов в Незере
 quest.cocktail_of_ascension.objective.3=Поговорите с сумасшедшим ученым-наркоманом
 quest.sacrifice.title=Жертвоприношение
 quest.sacrifice.info=We are the Dark Vail. We have begun restoring an ancient artifact, the effects of which will remain a secret. All we need from you $player is to sacrifice $maxKillCount animal newborns in the name of the dark lord, whose name strikes fear in the hearts of the innocent. Barry the dark lord. You will be compensated handsomely for your efforts.
 quest.sacrifice.objective.0=Kill $killCount/$maxKillCount Babies
 quest.department_of_agriculture.title=Министерство сельского хозяйства
-quest.department_of_agriculture.info=To all willing hands. This is a job offer from the department of agriculture. We operate in the desolate world of Barus V and you can image the obstacles we face when it comes to growing %3$s. As our plans for hydroponic farms come to turn, our people starve to death. We are searching for capable parties to aid us in the supplying of %3$s shipments to our citizens in need.
-quest.department_of_agriculture.objective.0=Gather %2$s/%3$s %4$s
+quest.department_of_agriculture.info=To all willing hands. This is a job offer from the department of agriculture. We operate in the desolate world of Barus V and you can image the obstacles we face when it comes to growing $mineBlock. As our plans for hydroponic farms come to turn, our people starve to death. We are searching for capable parties to aid us in the supplying of $mineBlock shipments to our citizens in need.
+quest.department_of_agriculture.objective.0=Gather $mineAmount/$maxMineAmount $mineBlock
+quest.department_of_agriculture.objective.1=Now Gather $mineAmount/$maxMineAmount $mineBlock.
+quest.department_of_agriculture.objective.2=Now Gather $mineAmount/$maxMineAmount $mineBlock.
 quest.one_true_love.title=One true love
 quest.one_true_love.info=I'm so happy! You can't even imagine what a joyous moment this is! Merry has finally agreed to merry me. You don't even know how many times I've tried to win her heart. At long last her father gave us his blessing. I know our love is more than enough to keeps us going, but I wanted to give her something special. I was hoping you can find me a diamond so I can put a marvelous ring onto her precious finger. I will forever be in dept and I will be more than happy to compensate for you troubles.
 quest.one_true_love.objective.0=Mine $mineAmount/$maxMineAmount Diamonds
