--- a/src/main/resources/assets/matteroverdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/zh_cn.lang
@@ -700,17 +700,19 @@ quest.kill_androids.title=异族将屠净我等！
 quest.kill_androids.info=机械人正在抢走我们的世界！我不知道它们究竟来自何处，但它们的数量与日俱增，源源不绝。如若不想就此灭亡，我们必须奋起反抗！Player，带领我们战斗吧！在它们彻底夺取这个世界前，尽力干掉它们吧！
 quest.kill_androids.objective.0=杀死$killCount/$maxKillCount机械人
 quest.cocktail_of_ascension.title=调制鸡尾酒
-quest.cocktail_of_ascension.info=曾经有一位疯狂科学家要你带给他%2$s份锹杀爬行者身上的火药和%3$s份下界最阴暗深处生长的红蘑菇，方便他调制鸡尾酒。
-quest.cocktail_of_ascension.objective.0=用锹杀死%2$s/%3$s爬行者
-quest.cocktail_of_ascension.objective.1=收集%2$s/%3$s份火药
-quest.cocktail_of_ascension.objective.2=收集%2$s/%3$s枚红蘑菇
+quest.cocktail_of_ascension.info=曾经有一位疯狂科学家要你带给他$gunpowdermaxAmount份锹杀爬行者身上的火药和$mushroommaxAmount份下界最阴暗深处生长的红蘑菇，方便他调制鸡尾酒。
+quest.cocktail_of_ascension.objective.0=用锹杀死$creeperAmount/$creepermaxAmount爬行者
+quest.cocktail_of_ascension.objective.1=收集$gunpowderAmount/$gunpowdermaxAmount份火药
+quest.cocktail_of_ascension.objective.2=收集$mushroomAmount/$mushroommaxAmount枚红蘑菇
 quest.cocktail_of_ascension.objective.3=跟疯狂科学家（瘾君子）进行交谈
 quest.sacrifice.title=献祭
 quest.sacrifice.info=我们是Dark Vail。我们正着手修复一件古代宝物，其功能则是个秘密。$player，我们希望你以黑暗领主之名献祭$maxKillCount只动物幼崽，成就黑暗领主的赫赫凶名。以黑暗领主巴里之名起誓，你将得到丰厚的回报。
 quest.sacrifice.objective.0=屠戮$killCount/$maxKillCount幼崽
 quest.department_of_agriculture.title=农业部
-quest.department_of_agriculture.info=农业部欢迎勤劳能干者的加入。你可以想见，在荒芜的巴鲁斯V星上，种植%3$s是多么的不易。还没等到我们的水培农场建成投产，我们就已经饿殍遍地了。诚邀有能力者资助给我们%3$s，必有重谢。
-quest.department_of_agriculture.objective.0=收获%2$s/%3$s %4$s
+quest.department_of_agriculture.info=农业部欢迎勤劳能干者的加入。你可以想见，在荒芜的巴鲁斯V星上，种植$mineBlock是多么的不易。还没等到我们的水培农场建成投产，我们就已经饿殍遍地了。诚邀有能力者资助给我们$mineBlock，必有重谢。
+quest.department_of_agriculture.objective.0=收获$mineAmount/$maxMineAmount $mineBlock
+quest.department_of_agriculture.objective.1=收获$mineAmount/$maxMineAmount $mineBlock.
+quest.department_of_agriculture.objective.2=收获$mineAmount/$maxMineAmount $mineBlock.
 quest.one_true_love.title=真挚的爱
 quest.one_true_love.info=我真的好开心！你甚至无法想象这一刻我是多么快乐！Merry终于同意嫁给我，你也许不知道我为这一刻付出了多少心血。不过这一切归根到底还是得力于她的父亲给予我们的祝福，我知道以我现在的能力足以给她一个美好生活，但我还是想给她一些特别的礼物。我希望你能帮助我找到一颗钻石，这样我就能做个钻戒戴在她的手上，我相信她一定会记住这难忘的一天。另外，作为回报，我很乐意尽我最大的能力帮助你。
 quest.one_true_love.objective.0=采掘$mineAmount/$maxMineAmount钻石
