--- a/src/main/resources/assets/matteroverdrive/lang/en_us.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/en_us.lang
@@ -558,7 +558,7 @@ biotic_stat.step_assist.details=Automatic step assistance/n/for steps 1 block hi
 biotic_stat.zero_calories.name=Zero Calories
 biotic_stat.zero_calories.details=Removes nutritional requirements
 biotic_stat.wireless_charger.name=Wireless Charger
-biotic_stat.wireless_charger.details=Charges items in hotbar/n/except held item/n/Charge speed: %s/t FE
+biotic_stat.wireless_charger.details=Charges items in hotbar/n/except held item/n/Charge speed: %s FE/t
 biotic_stat.inertial_dampers.name=Inertial Dampers
 biotic_stat.inertial_dampers.details=Negate fall damage by %s
 biotic_stat.item_magnet.name=Item Magnet
