--- a/src/main/resources/assets/matteroverdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/zh_cn.lang
@@ -531,7 +531,7 @@ biotic_stat.step_assist.details=自动辅助攀登/n/一格高的方块
 biotic_stat.zero_calories.name=辟谷
 biotic_stat.zero_calories.details=无需有机营养
 biotic_stat.wireless_charger.name=无线充能
-biotic_stat.wireless_charger.details=为快捷栏除手持物品以外的/n/物品进行充能/n/充能速度:%s/t FE
+biotic_stat.wireless_charger.details=为快捷栏除手持物品以外的/n/物品进行充能/n/充能速度:%s FE/t
 biotic_stat.inertial_dampers.name=惯性阻尼器
 biotic_stat.inertial_dampers.details=消除摔落伤害 %s
 biotic_stat.item_magnet.name=物品磁铁
