--- a/src/main/resources/assets/matteroverdrive/lang/en_us.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/en_us.lang
@@ -283,11 +283,10 @@ tile.decorative.tritanium_plate.name=Tritanium Plate
 tile.decorative.carbon_fiber_plate.name=Carbon Fiber Plate
 tile.decorative.matter_tube.name=Matter Tube
 tile.decorative.beams.name=Tritanium Grate
-tile.decorative.floor_tiles.name=Floor Tiles
-tile.decorative.floor_tiles_green.name=Green Floor Tiles
+tile.decorative.floor_tiles.name=Colored Floor Tiles
 tile.decorative.floor_noise.name=Linoleum Floor
 tile.decorative.tritanium_plate_stripe.name=Tritanium Plate Guided
-tile.decorative.floor_tile_white.name=White Floor Tiles
+tile.decorative.floor_tile.name=Colored Floor Tile
 tile.decorative.white_plate.name=Soft Wall Plates
 tile.decorative.separator.name=Tritanium Rail
 tile.decorative.engine_exhaust_plasma.name=Engine Exhaust Plasma
