#59 Mob info window config.
#59 Mob info window config.

--- a/src/main/resources/assets/matteroverdrive/lang/en_us.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/en_us.lang
@@ -636,6 +636,7 @@ config.android_hud.minimap.position=Minimap Position
 config.android_hud.color=HUD Color
 config.android_hud.opacity=HUD Opacity
 config.android_hud.hide_vanilla=Hide Vanilla HUD elements
+config.android_hud.show_entity=Show Entity HUD elements
 config.android_hud.opacity_background=HUD Elements Background Opacity
 config.compatibility.name=Compatibility
 
