--- a/src/main/resources/assets/matteroverdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/matteroverdrive/lang/zh_cn.lang
@@ -58,7 +58,7 @@ item.matteroverdrive.network_flash_drive.name=网络闪存驱动器
 item.matteroverdrive.network_flash_drive.details=为物质网络中的设备配置过滤功能
 item.matteroverdrive.energy_pack.name=能量包
 item.matteroverdrive.energy_pack.details=用于快速充电/n为能量武器装弹
-item.matteroverdrive.phaser_rifle.name=相位来复枪
+item.matteroverdrive.phaser_rifle.name=相位步枪
 item.matteroverdrive.transport_flash_drive.name=传送闪存驱动器
 item.matteroverdrive.transport_flash_drive.details=记录坐标以便快速使用传送仪
 item.matteroverdrive.matter_container_empty.name=空物质仓
@@ -81,7 +81,7 @@ item.matteroverdrive.tritanium_axe.name=三钛合金斧
 item.matteroverdrive.tritanium_shovel.name=三钛合金铲
 item.matteroverdrive.contract.name=任务卡
 item.matteroverdrive.ion_sniper.name=离子狙击枪
-item.matteroverdrive.plasma_shotgun.name=相位散弹枪
+item.matteroverdrive.plasma_shotgun.name=相位霰弹枪
 item.matteroverdrive.weapon_receiver.name=武装导能器
 item.matteroverdrive.weapon_handle.name=武器手柄
 item.matteroverdrive.plasma_core.name=相位能量整流核心
